--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,3 +18,6 @@ jobs:
 
             - name: "Build with make"
               run: make all
+
+            - name: "Run tests"
+              run: make test
